@@ -2044,12 +2044,6 @@ value is true.
 <p>The ppd-device-id attribute specifies the IEEE-1284 device ID
 string for the device described by the PPD file.</p>
 
-<h4><a name="ppd-natural-scaling">ppd-natural-language (naturalLanguage)</a></h4>
-
-<p>The ppd-natural-language attribute specifies the language encoding
-of the PPD file (the LanguageVersion attribute in the PPD file). If the
-language is unknown or undefined then "en" (English) is assumed.
-
 <h4><a name="ppd-make">ppd-make (text(127))</a></h4>
 
 <p>The ppd-make attribute specifies the manufacturer of the printer
@@ -2069,6 +2063,17 @@ ShortNickName attributes are used instead.
 <p>The ppd-name attribute specifies the PPD filename on the server
 relative to the model directory. The forward slash (/) is used to
 delineate directories.
+
+<h4><a name="ppd-natural-language">ppd-natural-language (naturalLanguage)</a></h4>
+
+<p>The ppd-natural-language attribute specifies the language encoding
+of the PPD file (the LanguageVersion attribute in the PPD file). If the
+language is unknown or undefined then "en" (English) is assumed.
+
+<h4><a name="ppd-product">ppd-product (text(127))</a></h4>
+
+<p>The ppd-product attribute specifies the Product attribute value in the PPD file.
+
 
 <h3 class='title'><a name='PRINTER_ATTRIBUTES'>Printer Attributes</a></h3>
 
